# web-media-controller

./: .eslintrc.yaml  .eslintrc.yml  .gitignore  .jshintrc  CONTRIBUTING.md  COPYING  Gruntfile.js  LICENSE  README.md  background.js  bower.json  chrome-updates.xml  chrome_manifest.json  firefox-updates.json  firefox_manifest.json  manifest.json  package-lock.json  package.json
.github/workflows/: build.yml  lint.yml
.grunt/: sign-for-amo.js
_locales/en/: messages.json
_locales/ru/: messages.json
background/: connectors.js  connectors.json  content-injector.js  controller-proxy.js  listener-manager.js  main.js  requirejs-config.js  tab-chooser.js  url-match.js  utils.js
background/adapters/: mpris2.js  rainmeter.js
common/: defaults.js  defaults.json  prefs.js  stackset.js
connectors/: .eslintrc.yaml  deezer.js  googlemusic.js  invidious.js  jazzradio.js  listen.moe.js  pandora.js  soundcloud.js  spotify.js  vk.js  yandex-music.js  youtube.js
content/: .eslintrc.yaml  base-connector.js  connect.js  connector.js  filter.js  utils.js  vk-dom-inject.js  vk.js
desktop/: .editorconfig  CMakeLists.txt  Makefile  grab.c  grab.h  info.h  install_icons.sh  main.c  me.f1u77y.vkpc.json  me.f1u77y.web_media_controller.chromium.json  me.f1u77y.web_media_controller.firefox.json  me.f1u77y.web_media_controller.json  mpris2-player.xml  mpris2.c  mpris2.h  server.c  server.h  util.c  util.h  vector.c  vector.h
desktop/cmake/: gdbus_codegen.cmake
desktop/include/: info.h  main.h  message.h  mpris2.h  proxy.h  util.h
desktop/src/: main.c  message.c  mpris2.c  proxy.c  util.c
extension/: .eslintrc.yml  background.js  chrome-updates.xml  firefox-updates.json  manifest.json
extension/_locales/en/: messages.json
extension/_locales/ru/: messages.json
extension/background/: background.js  controller-proxy.js  main.js  tab-chooser.js
extension/common/: defaults.js  prefs.js
extension/connectors/: .eslintrc.yaml  deezer.js  listen.moe.js  vk.js  youtube.js
extension/content/: base-connector.js  connect.js  connector.js  utils.js  vk-dom-inject.js  vk.js
extension/inject/: .eslintrc.yaml  common.js  deezer.js  vk.js
extension/options/: i18n.js  main.js  options.html
extensions/chrome/: common.js  inject_and_return.js  inject_exec.js  manifest.json
extensions/chrome/_locales/en/: messages.json
extensions/firefox/: chrome.manifest  install.rdf
extensions/firefox/chrome/: background.js  inject_on_load.js  overlay.xul
inject/: common.js  deezer.js  vk.js  yandex-music.js
options/: i18n.js  main.js  options.css  options.html  options.js  view.yml
options/css/: options.css
src/: firefox_manifest.json  manifest.json
src/_locales/en/: messages.json
src/_locales/ru/: messages.json
src/background/: connectors.json  content-injector.js  listener-manager.js  main.js  tab-chooser.js  url-match.js  utils.js
src/background/adapters/: mpris2.js  rainmeter.js
src/common/: prefs.js  stackset.js
src/connectors/: amazon-music.js  amazon-video.js  bilibili.js  deezer.js  googlemusic.js  invidious.js  jazzradio.js  listen.moe.js  netease-music.js  pandora.js  plex.js  soundcloud.js  spotify.js  vk.js  yandex-music.js  youtube.js
src/content/: base-connector.js  filter.js  inject-utils.js  utils.js
src/inject/: deezer.js  vk.js  yandex-music.js
src/options/: i18n.js  main.js  match-input.mustache  options.mustache
src/options/css/: options.css
